# rag-pipeline

./: .env.ejemplo  Dockerfile  README.md  docker-compose.yml  ingerir_demo.py  pyproject.toml  requirements-dev.txt  requirements-modelo.txt  requirements.txt
.github/workflows/: ci.yml
datos/: corpus.json
rag/: almacen.py  api.py  bd.py  fragmentador.py  generador.py  modelos.py  recuperador.py  vectorizador.py
seed/: 01_esquema.sql
tests/: conftest.py  test_almacen.py  test_api.py  test_fragmentador.py  test_generador.py  test_humo.py  test_recuperador.py  test_vectorizador.py
